# trend-switch-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
app/: __init__.py  config.py  db.py  hyperliquid_client.py  indicators.py  main.py  models.py  noon_hub.py  regime.py  risk.py  scheduler.py  service.py  strategy.py
app/static/: dashboard.css  dashboard.js  index.html
tests/: test_indicators.py  test_risk.py
